--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,14 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Poppins";
 }
 
 body {
-  background: linear-gradient(
-    90deg,
-    rgb(46, 15, 250) 0%,
-    rgba(100, 115, 255, 1) 100%
-  );
+  background: rgb(82, 109, 130);
 }
 .todo-app {
   display: flex;
@@ -19,7 +16,7 @@ body {
   justify-content: start;
   width: 520px;
   min-height: 600px;
-  background: #161a2b;
+  background: #27374d;
   text-align: center;
   margin: 128px auto;
   border-radius: 10px;
@@ -44,7 +41,7 @@ h1 {
 .todo-input {
   padding: 14px 32px 14px 16px;
   border-radius: 4px 0 0 4px;
-  border: 2px solid #5d0cff;
+  border: 2px solid #9db2bf;
   outline: none;
   width: 320px;
   background: transparent;
@@ -53,6 +50,7 @@ h1 {
 
 .todo-input::placeholder {
   color: #e2e2e2;
+  font-size: 14px;
 }
 
 .todo-button {
@@ -61,25 +59,21 @@ h1 {
   border-radius: 0 4px 4px 0;
   cursor: pointer;
   outline: none;
-  background: linear-gradient(
-    90deg,
-    rgba(93, 12, 255, 1) 0%,
-    rgba(155, 0, 250, 1) 100%
-  );
+  background: #9db2bf;
   color: #fff;
   text-transform: capitalize;
 }
 
+/* .todo-button:hover {
+  background: ;
+} */
+
 .todo-input.edit {
-  border: 2px solid #149fff;
+  border: 2px solid rgb(82, 109, 130);
 }
 
 .todo-button.edit {
-  background: linear-gradient(
-    90deg,
-    rgba(20, 159, 255, 1) 0%,
-    rgba(17, 122, 255, 1) 100%
-  );
+  background: rgb(82, 109, 130);
   padding: 16px 22px;
 }
 
@@ -95,39 +89,10 @@ h1 {
   align-items: center;
   margin: 4px auto;
   color: #fff;
-  background: linear-gradient(
-    90deg,
-    rgba(255, 118, 20, 1) 0%,
-    rgba(255, 84, 17, 1) 100%
-  );
-
+  background: #9db2bf;
   padding: 16px;
   border-radius: 5px;
   width: 90%;
-}
-
-.todo-row:nth-child(4n + 1) {
-  background: linear-gradient(
-    90deg,
-    rgba(93, 12, 255, 1) 0%,
-    rgba(155, 0, 250, 1) 100%
-  );
-}
-
-.todo-row:nth-child(4n + 2) {
-  background: linear-gradient(
-    90deg,
-    rgba(255, 12, 241, 1) 0%,
-    rgba(250, 0, 135, 1) 100%
-  );
-}
-
-.todo-row:nth-child(4n + 3) {
-  background: linear-gradient(
-    90deg,
-    rgba(20, 159, 255, 1) 0%,
-    rgba(17, 122, 255, 1) 100%
-  );
 }
 
 .icons {
